address comments
Signed-off-by: chrislai <chrlaii@amazon.com>