@@ -190,7 +190,7 @@ public class MLFlowAgentRunner implements MLAgentRunner {
             }
         }
 
-        MLToolSpec toolSpec = toolSpecs.get(0);
+        MLToolSpec toolSpec = toolSpecs.getFirst();
         Span toolCallSpan = MLAgentTracer
             .getInstance()
             .startConversationalToolCallSpan(
